🐛(table): 修复 selectedKeys 与 expandKeys 属性不正确造成的 volar 的检测错误提示

--- a/package/component/package.json
+++ b/package/component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@layui/layui-vue",
-  "version": "1.9.5",
+  "version": "1.9.6-alpha.2",
   "author": "就眠儀式",
   "license": "MIT",
   "description": "a component library for Vue 3 base on layui-vue",
